<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linear_layout_pendingCharge_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/Pending_Charge_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/name"
            android:background="@color/ammount_background_one"
            style="@style/PendingCharge_Header"
            />
        <TextView
            android:id="@+id/Pending_Charge_Subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/subject"
            style="@style/PendingCharge_Header"
            android:background="@color/ammount_background_two"
            />
        <TextView
            android:id="@+id/Pending_Charge_Ammount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/pendingCharge"
            style="@style/PendingCharge_Header"
            android:background="@color/ammount_background_one"
            />

        <TextView
            android:id="@+id/Pending_Charge_StartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/startDate"
            style="@style/PendingCharge_Header"
            android:background="@color/ammount_background_two"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>