<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout_income_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/Income_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/name"
            android:background="@color/ammount_background_one"
            style="@style/PendingCharge_Header"
            />

        <TextView
            android:id="@+id/Income_Ammount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/paidCharge"
            style="@style/PendingCharge_Header"
            android:background="@color/ammount_background_two"
            />

        <TextView
            android:id="@+id/Income_PaidDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/paidDate"
            style="@style/PendingCharge_Header"
            android:background="@color/ammount_background_one"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>