<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PendingChargeActivity"
    android:id="@+id/Pending_Charge_Drawer"
    >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/name"
                style="@style/PendingCharge_Header"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/subject"
                style="@style/PendingCharge_Header"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/pendingCharge"
                style="@style/PendingCharge_Header"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/startDate"
                style="@style/PendingCharge_Header"
                />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                >
            <TextView
                android:id="@+id/txtTotalPendingAmmountHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalpendingCharge"
                android:visibility="invisible"
                />
                <TextView
                    android:id="@+id/txtTotalPendingAmmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="loading"
                    android:visibility="invisible"
                    />
            </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/progress_bar"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPendingChargeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>


    </LinearLayout>

    <include layout="@layout/navigation_view"/>

</android.support.v4.widget.DrawerLayout>