<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ede9e3"
    tools:context="education.slash.slash.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_centerInParent="true"
            >

            <ImageView
                android:id="@+id/home_logo"
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_home_color"
                />

            <TextView
                android:id="@+id/home_SL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40dp"
                android:textColor="#b40754"
                android:text="SL"
                android:layout_toLeftOf="@+id/home_logo"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium"

                />

            <TextView
                android:id="@+id/home_SH"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40dp"
                android:textColor="#e70c6a"
                android:text="SH"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/home_logo"
                android:typeface="serif"

                />

        </RelativeLayout>

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="0dp"
        android:layout_weight="7"
    android:orientation="vertical"
    android:background="#d6cfc5"
        app:cardCornerRadius="30dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:cardBackgroundColor="#f4e3cd"
        app:cardUseCompatPadding="true"
        android:elevation="1dp"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">



            <RelativeLayout
                android:id="@+id/main_relativelayout_student"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/Home_Card_View"
                    android:layout_width="match_parent">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Home_Text_View"
                            android:text="@string/student"
                             />


                </android.support.v7.widget.CardView>

                <ImageView
                    android:id="@+id/main_student_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:elevation="30dp"

                    android:src="@drawable/ic_student_color" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/main_relativelayout_teacher"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/Home_Card_View"
                    android:layout_width="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Home_Text_View"
                            android:text="@string/teacher"
                             />


                </android.support.v7.widget.CardView>

                <ImageView
                    android:id="@+id/main_teacher_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:elevation="30dp"

                    android:src="@drawable/ic_teacher_color" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_relativelayout_course"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/Home_Card_View"
                    android:layout_width="match_parent">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Home_Text_View"
                            android:text="@string/courses"
                             />


                </android.support.v7.widget.CardView>

                <ImageView
                    android:id="@+id/main_course_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:elevation="30dp"

                    android:src="@drawable/ic_course_color" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_relativelayout_income"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/Home_Card_View"
                    android:layout_width="match_parent">



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Home_Text_View"
                            android:text="@string/income"
                             />

                </android.support.v7.widget.CardView>

                <ImageView
                    android:id="@+id/main_income_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:elevation="30dp"

                    android:src="@drawable/ic_income_color" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_relativelayout_pending"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                >

                <android.support.v7.widget.CardView
                    style="@style/Home_Card_View"
                    android:layout_width="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Home_Text_View"
                            android:text="@string/pending"
                            />


                </android.support.v7.widget.CardView>

                <ImageView
                    android:id="@+id/main_pending_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:elevation="30dp"

                    android:src="@drawable/ic_pending_color" />




            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_relativelayout_pending2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                   >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:hint="Database as of - "/>
                    <include layout="@layout/progress_bar"/>
                <TextView
                    android:id="@+id/database_date"
                    android:layout_width="wrap_content"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:hint="Click Here"
                    />
                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>




    </LinearLayout>



</android.support.v4.widget.DrawerLayout>
